# noze

./: .gitignore  CMakeLists.txt  README.md  SConstruct  build-once.sh  build-optimized.sh  build.sh  language.md  lint.moon  noze.sublime-syntax  noze.tmLanguage  perf.data  readme.md  run.sh  test.sh  todo.txt
doc/: developing.md  future.md  implementation.md  language.md  style.md
doc/todo/: runtime.md
include/: arr-utils.nz  bootstrap.nz  cell.nz  dict.nz  fut-utils.nz  gc.nz  include.nz  io.nz  iter.nz  mut-bag.nz  number-utils.nz  os.nz  runtime.nz  std.nz  str-utils.nz  thread-utils.nz
src/: Path.cpp  Path.h  cli.cpp  cli.h  compiler.cpp  compiler.h  concreteModel.cpp  concreteModel.h  diag.h  instantiate.cpp  instantiate.h  main.cpp  model.cpp  model.h  parseDiag.h  util.cpp  util.h
src/backend/: firm.cpp  firm.h  writeToC.cpp  writeToC.h
src/concretize/: allConstants.cpp  allConstants.h  builtinInfo.cpp  builtinInfo.h  concretize.cpp  concretize.h  concretizeBuiltin.cpp  concretizeBuiltin.h  concretizeCtx.cpp  concretizeCtx.h  concretizeExpr.cpp  concretizeExpr.h  concretizeUtil.cpp  concretizeUtil.h  getReferencedOnly.cpp  getReferencedOnly.h  mangleName.cpp  mangleName.h  specialize.cpp  specialize.h  writer.cpp  writer.h
src/frontend/: ast.h  check.cpp  check.h  checkCall.cpp  checkCall.h  checkCtx.h  checkExpr.cpp  checkExpr.h  compile.cpp  compile.h  frontendCompile.cpp  frontendCompile.h  inferringType.cpp  inferringType.h  lexer.cpp  lexer.h  parse.cpp  parse.h  parseExpr.cpp  parseExpr.h  parseType.cpp  parseType.h  programState.h  readOnlyStorage.cpp  readOnlyStorage.h  showDiag.cpp  showDiag.h  typeFromAst.cpp  typeFromAst.h
src/util/: arena.cpp  arena.h  arr.h  arrBuilder.h  arrUtil.h  bitUtils.h  bool.h  cell.h  comparison.h  dict.h  dictBuilder.h  dictUtil.h  diff.cpp  diff.h  io.cpp  io.h  late.h  lineAndColumnGetter.cpp  lineAndColumnGetter.h  memory.h  mutArr.h  mutDict.h  mutQueue.h  mutSet.h  mutSlice.h  opt.h  output.cpp  output.h  path.cpp  path.h  range.h  result.h  resultUtil.h  set.h  sexpr.cpp  sexpr.h  sourceRange.h  str.cpp  str.h  sym.cpp  (+8 more)
test/: a.cpp  a.nz  build.sh
